split-projects/networking-vpc-06cab6363775ce4b0/main.tf
# Auto-generated Terraform configuration
# Generated by tfstate-to-iac skill

# --- aws_internet_gateway (1) ---

resource "aws_internet_gateway" "main_igw" {
  vpc_id = "vpc-06cab6363775ce4b0"
  tags = {
    "Name" = "main-igw"
  }
}

# --- aws_route_table (1) ---

resource "aws_route_table" "rtb_0affc75d8b5f746ee" {
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "igw-02c1ecab69a1c2a3b"
  }
  vpc_id = "vpc-06cab6363775ce4b0"
}

# --- aws_security_group (1) ---

resource "aws_security_group" "sg_07e6a004511fed45e" {
  description = "default VPC security group"
  name = "default"
  egress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 0
    protocol = "-1"
    to_port = 0
  }
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 22
    protocol = "tcp"
    to_port = 22
  }
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 80
    protocol = "tcp"
    to_port = 80
  }
  vpc_id = "vpc-06cab6363775ce4b0"
}

# --- aws_subnet (8) ---

resource "aws_subnet" "private_subnet_1" {
  availability_zone = "us-west-2a"
  cidr_block = "172.31.4.0/24"
  vpc_id = "vpc-06cab6363775ce4b0"
  tags = {
    "Name" = "private-subnet-1"
  }
}

resource "aws_subnet" "private_subnet_2" {
  availability_zone = "us-west-2b"
  cidr_block = "172.31.5.0/24"
  vpc_id = "vpc-06cab6363775ce4b0"
  tags = {
    "Name" = "private-subnet-2"
  }
}

resource "aws_subnet" "private_subnet_3" {
  availability_zone = "us-west-2c"
  cidr_block = "172.31.6.0/24"
  vpc_id = "vpc-06cab6363775ce4b0"
  tags = {
    "Name" = "private-subnet-3"
  }
}

resource "aws_subnet" "private_subnet_4" {
  availability_zone = "us-west-2d"
  cidr_block = "172.31.7.0/24"
  vpc_id = "vpc-06cab6363775ce4b0"
  tags = {
    "Name" = "private-subnet-4"
  }
}

resource "aws_subnet" "public_subnet_1" {
  availability_zone = "us-west-2a"
  cidr_block = "172.31.0.0/24"
  vpc_id = "vpc-06cab6363775ce4b0"
  tags = {
    "Name" = "public-subnet-1"
  }
}

resource "aws_subnet" "public_subnet_2" {
  availability_zone = "us-west-2b"
  cidr_block = "172.31.1.0/24"
  vpc_id = "vpc-06cab6363775ce4b0"
  tags = {
    "Name" = "public-subnet-2"
  }
}

resource "aws_subnet" "public_subnet_3" {
  availability_zone = "us-west-2c"
  cidr_block = "172.31.2.0/24"
  vpc_id = "vpc-06cab6363775ce4b0"
  tags = {
    "Name" = "public-subnet-3"
  }
}

resource "aws_subnet" "public_subnet_4" {
  availability_zone = "us-west-2d"
  cidr_block = "172.31.3.0/24"
  vpc_id = "vpc-06cab6363775ce4b0"
  tags = {
    "Name" = "public-subnet-4"
  }
}

# --- aws_vpc (1) ---

resource "aws_vpc" "vpc_06cab6363775ce4b0" {
  cidr_block = "172.31.0.0/16"
  instance_tenancy = "default"
}
